# VayuNetra

./: .env.example  .gitignore  Makefile  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
bots/telegram/: main.py  store.py
conf/: config.yaml
conf/attribution/: feature_to_source.yaml
conf/city/: bengaluru.yaml  delhi.yaml
conf/ingest/: cams.yaml  firms.yaml  open_meteo.yaml  openaq.yaml  s5p.yaml  traffic.yaml
conf/model/: forecast.yaml  lur.yaml
conf/serve/: default.yaml
deploy/: Dockerfile.api  docker-compose.demo.yml  docker-compose.yml
deploy/grafana/dashboards/: api_slos.json  ingestion_health.json  model_performance.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: datasource.yml
deploy/postgres/: init.sql
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: architecture.md  architecture.mmd  demo_script.md  roadmap.md
docs/deck/: deck.md  slides.md
frontend/: app.js  index.html  style.css
scripts/: benchmark_response_time.py  bootstrap_history.py  translate_templates.py  verify_keys.py
src/vayunetra/advisory/: rag.py  templates.py
src/vayunetra/agents/: __init__.py  nodes.py  state.py  supervisor.py
src/vayunetra/api/: main.py  observability.py
src/vayunetra/api/routers/: advisory.py  agent.py  attribution.py  enforce.py  forecast.py  health.py
src/vayunetra/api/schemas/: __init__.py
src/vayunetra/channels/: ivr.py
src/vayunetra/common/: cache.py  config.py  errors.py  logging.py
src/vayunetra/enforcement/: brief.py  hotspots.py  ranker.py  service.py
src/vayunetra/eval/: run.py  walk_forward.py
src/vayunetra/features/: forecast_features.py  lur_features.py
src/vayunetra/ingestion/: __main__.py  cams.py  firms.py  gee.py  open_meteo.py  openaq.py  static_layers.py  traffic.py  utils.py
src/vayunetra/mlops/: __init__.py  data_quality.py  drift.py
src/vayunetra/models/attribution/: overlay.py  shap_explainer.py  trajectory.py
src/vayunetra/models/forecast/: baselines.py  cv.py  lightgbm_trainer.py
src/vayunetra/models/lur/: predictor.py  trainer.py
src/vayunetra/serving/: tile_cache.py
src/vayunetra/storage/: bootstrap.py  db.py  models.py
src/vayunetra/storage/migrations/: 0001_init.sql
tests/: conftest.py
tests/eval/: test_attribution.py  test_enforcement_precision.py  test_eval_harness.py  test_persistence_gate.py  test_translation.py
tests/unit/: test_baselines.py  test_forecast_features.py  test_grid_builder.py  test_lur_predictor.py  test_mlops.py  test_tile_cache.py  test_utils.py  test_wind_decomposition.py
