[tool.poetry]
name = "vayunetra"
version = "0.1.0"
description = "VayuNetra — geospatial air-quality intelligence platform"
authors = ["VayuNetra Team"]
readme = "README.md"
packages = [{ include = "vayunetra", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web / API
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
slowapi = "^0.1.9"

# Config / orchestration
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
prefect = "^2.20.0"
tenacity = "^9.0.0"
aiolimiter = "^1.1.0"

# HTTP
httpx = "^0.27.0"

# Data / DB
sqlalchemy = "^2.0.35"
geoalchemy2 = "^0.16.0"
alembic = "^1.13.0"
psycopg = { extras = ["binary"], version = "^3.2.0" }
redis = "^5.1.0"
minio = "^7.2.0"

# Geo / RS
geopandas = "^1.0.0"
shapely = "^2.0.6"
rasterio = "^1.4.0"
rioxarray = "^0.17.0"
xarray = "^2024.9.0"
pyproj = "^3.7.0"
earthengine-api = "^1.1.0"
pysal = "^24.7"
esda = "^2.6.0"
libpysal = "^4.12.0"

# ML
numpy = "^2.0.0"
pandas = "^2.2.0"
scikit-learn = "^1.5.0"
lightgbm = "^4.5.0"
shap = "^0.46.0"
mlflow = "^2.16.0"
dvc = { extras = ["s3"], version = "^3.55.0" }
evidently = "^0.4.40"
great-expectations = "^1.0.0"
pandera = "^0.20.0"

# LLM / agents
langgraph = "^0.2.40"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
ollama = "^0.3.0"

# Bots
python-telegram-bot = "^21.6"

# Observability
prometheus-fastapi-instrumentator = "^7.0.0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-vcr = "^1.0.2"
ruff = "^0.7.0"
black = "^24.10.0"
mypy = "^1.13.0"
types-requests = "^2.32.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: integration tests requiring external services",
    "slow: slow tests",
]
