[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vayunetra"
version = "0.1.0"
description = "VayuNetra — geospatial air-quality intelligence platform"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "VayuNetra Team" }]

dependencies = [
  # Web / API
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9,<2.10",
  "pydantic-settings>=2.6,<2.7",
  "python-jose[cryptography]>=3.3",
  "slowapi>=0.1.9",

  # Config / orchestration
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "prefect>=2.20,<3",
  "tenacity>=9.0",
  "aiolimiter>=1.1",

  # HTTP
  "httpx>=0.27",

  # Data / DB
  "sqlalchemy>=2.0.35",
  "geoalchemy2>=0.16",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "redis>=5.1",
  "minio>=7.2",

  # Geo / RS
  "geopandas>=1.0",
  "shapely>=2.0.6",
  "rasterio>=1.4",
  "rioxarray>=0.17",
  "xarray>=2024.9",
  "pyproj>=3.7",
  "earthengine-api>=1.1",
  "esda>=2.6",
  "libpysal>=4.12",

  # ML
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "shap>=0.46",
  "mlflow>=2.16",
  "evidently>=0.4.40",

  # LLM / agents
  "langgraph>=0.2",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "ollama>=0.3",

  # Bots
  "python-telegram-bot>=21.6",

  # Observability
  "prometheus-fastapi-instrumentator>=7.0",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27",
  "structlog>=24.4",

  # Misc
  "pyyaml>=6.0",
  "matplotlib>=3.9",
  "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "pytest-vcr>=1.0.2",
  "ruff>=0.7",
  "black>=24.10",
  "mypy>=1.13",
  "types-requests>=2.32",
  "ipykernel>=6.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vayunetra"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: integration tests requiring external services",
  "slow: slow tests",
]
